--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -244,6 +244,8 @@
 </head>
 <body  style="position: relative;">
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container">
@@ -262,8 +264,25 @@
                 <li class="nav-item"><a class="nav-link" th:href="@{/request}">Request</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/volunteering}">Join Us</a></li>
             </ul>
-            <a th:href="@{/users/login}" class="btn btn-outline-primary me-2">Login</a>
-            <a th:href="@{/users/signup}" class="btn btn-primary">Register</a>
+            <div th:if="${member != null}">
+                <div th:if="${member.role != null and member.role == T(com.capstone.demo.Enum.Roles).MEMBER}" class="d-flex align-items-center">
+                    <a th:href="@{/profile}" class="btn btn-outline-primary me-2">
+                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="profile" style="width: 30px; height: 30px; border-radius: 50%;">
+                    </a>
+                </div>
+                <div th:if="${member.role != null and member.role == T(com.capstone.demo.Enum.Roles).PHARMACIST}" class="d-flex align-items-center">
+                    <a th:href="@{/pharmacist/profile}" class="btn btn-outline-primary me-2">
+                        <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="profile" style="width: 30px; height: 30px; border-radius: 50%;">
+                    </a>
+                </div>
+                <a th:href="@{/logout}" class="btn btn-danger">Logout</a>
+
+            </div>
+            <div th:if="${member == null}">
+                <a th:href="@{/users/login}" class="btn btn-outline-primary me-2">Login</a>
+                <a th:href="@{/users/signup}" class="btn btn-primary">Register</a>
+            </div>
+
         </div>
     </div>
 </nav>
@@ -391,7 +410,5 @@
     <p class="mb-1">Contact us at <a href="mailto:support@medilink.org">support@medilink.org</a></p>
     <p class="mb-0">&copy; 2025 MediLink. All rights reserved.</p>
 </footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
