--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -83,6 +83,17 @@
 </head>
 <body>
 
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    // Show/hide password
+    document.querySelector('.toggle-password').addEventListener('click', function () {
+      const field = document.querySelector('#password-field');
+      const type = field.type === 'password' ? 'text' : 'password';
+      field.type = type;
+    });
+</script>
+
 <!-- Login Section -->
 <section id="form1" class="form-section">
     <div class="container-fluid">
